--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -113,7 +113,6 @@
     background-color: $mainLightColor;
 
     &__img {
-        
         margin: 0 2rem;
         box-shadow: 0 0 1px $mainPurpleColor;
         overflow: hidden;
@@ -158,6 +157,7 @@
 
 .single-chat-box {
     display: flex;
+    user-select: none;
 
     &--self {
         flex-direction: row-reverse;
@@ -198,6 +198,28 @@
         border-radius: 10px;
         padding: 1.5rem 1rem;
         max-width: 50rem;
+        position: relative;
+
+        &__reaction-container {
+            position: absolute;
+            bottom: -1.5rem;
+
+            &__list-reaction {
+                display: block;
+                width: 30px;
+                height: 30px;
+                background-color: red;
+                overflow: hidden;
+                border-radius: 100%;
+            }
+
+            &--self {
+                right: 10%;
+            }
+            &--other {
+                left: 10%;
+            }
+        }
     }
 
     &__message--self {
@@ -210,6 +232,9 @@
             #f6f5f7,
             #f2ebf6
         );
+    }
+    &:hover {
+        color: lightblue;
     }
 }
 
