--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -435,14 +435,24 @@ a {
 .single-chat-box__message__reaction-container__reaction:hover {
   background-color: blue;
 }
-.single-chat-box__message__reaction-container__reaction-list {
-  position: absolute;
-}
-.single-chat-box__message__reaction-container--self {
+.single-chat-box__message__reaction-container__reaction--self {
   left: -1rem;
 }
-.single-chat-box__message__reaction-container--other {
-  left: 0;
+.single-chat-box__message__reaction-container__reaction--other {
+  right: -1rem;
+}
+.single-chat-box__message__reaction-container__reaction-list {
+  position: absolute;
+  top: -3.5rem;
+  width: 15rem;
+  background-color: red;
+  border-radius: 10rem;
+}
+.single-chat-box__message__reaction-container__reaction-list--self {
+  left: -7rem;
+}
+.single-chat-box__message__reaction-container__reaction-list--other {
+  right: -7rem;
 }
 .single-chat-box__message--self {
   background-image: linear-gradient(to right top, #fbfbfb, #fafafa, #f8f8f9, #f7f7f8, #f6f5f7, #f2ebf6);
