--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -6,6 +6,7 @@
 @import './components/completedStep';
 @import './components/input';
 @import './components/carousel';
+@import './components/reaction';
 
 
 /*pages*/
