--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -220,6 +220,21 @@ a {
   color: red !important;
 }
 
+.single-reaction-container {
+  display: flex;
+  padding: 0.5rem 1rem;
+}
+.single-reaction-container__icon {
+  color: #FBFBFB;
+  padding: 0.5rem;
+  margin-right: 0.5rem;
+  transform: scale(1);
+  transition: 0.2s;
+}
+.single-reaction-container__icon:hover {
+  transform: scale(1.4);
+}
+
 /*pages*/
 .welcome-container {
   border-radius: 3rem;
@@ -443,19 +458,19 @@ a {
 }
 .single-chat-box__message__reaction-container__reaction-list {
   position: absolute;
-  top: -3.5rem;
-  width: 15rem;
-  background-color: red;
+  top: -4.5rem;
   border-radius: 10rem;
+  background-color: #5D3B78;
+  box-shadow: 0 0 5px black;
   transition: 0.2s;
   opacity: 0;
   cursor: pointer;
 }
 .single-chat-box__message__reaction-container__reaction-list--self {
-  left: -7rem;
+  left: -15rem;
 }
 .single-chat-box__message__reaction-container__reaction-list--other {
-  right: -7rem;
+  right: -15rem;
 }
 .single-chat-box__message__reaction-container:hover .single-chat-box__message__reaction-container__reaction-list {
   opacity: 1;
