add UI friends & groups
+ Just UI
+ Not Responsive yet

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -13,6 +13,7 @@
 @import './pages/welcome';
 @import './pages/home';
 @import './pages/_sendMessage';
+@import './pages/friend';
 /*variables*/
 
 @import './variables/variables';
