add time send message feature

--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -205,6 +205,10 @@
             display: flex;
         }
 
+        &__time-send-message {
+            color: gray;
+        }
+
         &__reaction-container {
             transition: 0.2s;
 
