--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -12,7 +12,9 @@
 /*pages*/
 @import './pages/welcome';
 @import './pages/home';
-@import './pages/_sendMessage';
+@import './pages/sendMessage';
+@import './pages/infoOfRoom';
+
 /*variables*/
 
 @import './variables/variables';
