--- a/src/assets/css/pages/_infoOfRoom.scss
+++ b/src/assets/css/pages/_infoOfRoom.scss
@@ -1,3 +1,14 @@
+
+.info-room-right {
+     flex-grow: 1;
+     background-color: $mainLightColor;
+     &__scroll {
+          overflow-y: scroll;
+          overflow-x: hidden;
+     }
+ }
+ 
+
 .info-room-header {
      height: 10rem;
      border: thin solid silver;
