--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -36,6 +36,10 @@ a {
   background: #a166d1;
 }
 
+.modal-dialog {
+  margin-top: 17rem;
+}
+
 /*components*/
 .text-title {
   font-weight: bold;
@@ -565,6 +569,12 @@ a {
 }
 .option-room:hover {
   background-color: gray;
+}
+
+.edit-room-name__img {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
 }
 
 /*variables*/
