--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -14,6 +14,7 @@
 @import './pages/home';
 @import './pages/sendMessage';
 @import './pages/infoOfRoom';
+@import './pages/editRoomName';
 
 /*variables*/
 
