--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -14,7 +14,7 @@
 @import './pages/home';
 @import './pages/sendMessage';
 @import './pages/infoOfRoom';
-@import './pages/editRoomName';
+@import './pages/membersInRoom';
 
 /*variables*/
 
