--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -538,6 +538,7 @@ a {
   background-color: #FBFBFB;
 }
 .info-room-right__scroll {
+  height: calc(90vh - 10rem);
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -576,6 +577,12 @@ a {
 .edit-room-name__img {
   width: 100px;
   height: 100px;
+  border-radius: 100%;
+}
+
+.member-in-room__img {
+  width: 50px;
+  height: 50px;
   border-radius: 100%;
 }
 
