--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -75,6 +75,7 @@ a {
   font-size: 1.5rem;
   position: relative;
 }
+
 .btn-welcome__icon {
   position: absolute;
   left: 15%;
@@ -88,12 +89,14 @@ a {
   height: 100%;
   z-index: 9;
 }
+
 .loading__overlay {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: #FBFBFB;
 }
+
 .loading__spinner {
   font-size: 1rem;
   text-shadow: 0 0 5px black;
@@ -153,6 +156,7 @@ a {
   position: relative;
   right: 30px;
 }
+
 .dropdown .dropdown-menu {
   flex-direction: column;
   position: absolute;
@@ -178,6 +182,7 @@ a {
   height: auto;
   width: 25rem;
 }
+
 .input-container__input {
   outline: none;
   border: none;
@@ -185,21 +190,25 @@ a {
   transition: 0.3s;
   letter-spacing: 2px;
 }
+
 .input-container__input:focus + .input-container__label {
   top: -2rem;
   color: #FF6F91;
   font-size: 1.3rem;
   font-weight: bold;
 }
+
 .input-container__input:not(:placeholder-shown).input-container__input:not(:focus) + .input-container__label {
   top: -2rem;
   color: #FF6F91;
   font-size: 1.3rem;
   font-weight: bold;
 }
+
 .input-container__input:focus {
   border-bottom: 3px solid #D65DB1;
 }
+
 .input-container__label {
   position: absolute;
   transition: 0.3s;
@@ -224,6 +233,7 @@ a {
   display: flex;
   padding: 0.5rem 1rem;
 }
+
 .single-reaction-container__icon {
   color: #FBFBFB;
   padding: 0.5rem;
@@ -231,6 +241,7 @@ a {
   transform: scale(1);
   transition: 0.2s;
 }
+
 .single-reaction-container__icon:hover {
   transform: scale(1.4);
 }
@@ -245,6 +256,7 @@ a {
   border-radius: 50rem;
   padding: 0.5rem 2rem;
 }
+
 .current-reactions-expressed i {
   margin-right: 1rem;
 }
@@ -255,11 +267,13 @@ a {
   box-shadow: 0 0 15px rgba(93, 59, 120, 0.1);
   padding: 3rem 0;
 }
+
 .welcome-container__image {
   width: 30rem;
   height: 30rem;
   display: block;
 }
+
 .welcome-container__logo {
   box-shadow: 0 0 10px rgba(93, 59, 120, 0.3);
   width: 15%;
@@ -274,6 +288,7 @@ a {
 .home {
   display: flex;
 }
+
 .home__inbox-list {
   min-width: 38rem;
   max-width: 38rem;
@@ -281,6 +296,7 @@ a {
   overflow-x: hidden;
   height: 90vh;
 }
+
 .home__inbox-list__older-inboxs {
   color: #5D3B78;
   font-weight: bold;
@@ -288,6 +304,7 @@ a {
   transition: 0.2s;
   user-select: none;
 }
+
 .home__inbox-list__older-inboxs:hover {
   color: #a166d1;
 }
@@ -297,20 +314,24 @@ a {
   transition: 0.2s;
   cursor: pointer;
 }
+
 .inbox:hover {
   background-color: #a166d1;
   color: white;
 }
+
 .inbox__img {
   border-radius: 100%;
   overflow: hidden;
   width: 60px;
   height: 60px;
 }
+
 .inbox__img img {
   width: 100%;
   height: 100%;
 }
+
 .inbox__new-message {
   font-weight: bold;
   color: black;
@@ -327,6 +348,7 @@ a {
   align-items: flex-end;
   position: relative;
 }
+
 .read-by__img {
   top: 0.5rem;
   right: 0;
@@ -336,21 +358,26 @@ a {
   width: 15px;
   height: 15px;
 }
+
 .read-by__img--3 {
   left: 1rem;
 }
+
 .read-by__img--2 {
   left: 2rem;
   z-index: 1;
 }
+
 .read-by__img--1 {
   left: 3rem;
   z-index: 2;
 }
+
 .read-by__img--0 {
   left: 4rem;
   z-index: 3;
 }
+
 .read-by__overlay {
   opacity: 0.5;
   position: absolute;
@@ -377,6 +404,7 @@ a {
   padding: 2rem 0;
   background-color: #FBFBFB;
 }
+
 .header-box-chat__img {
   margin: 0 2rem;
   box-shadow: 0 0 1px #5D3B78;
@@ -385,13 +413,16 @@ a {
   width: 60px;
   height: 60px;
 }
+
 .header-box-chat__img img {
   width: 100%;
   height: 100%;
 }
+
 .header-box-chat__title {
   flex-grow: 6;
 }
+
 .header-box-chat__icon {
   flex-grow: 1;
   display: flex;
@@ -399,6 +430,7 @@ a {
   justify-content: flex-end;
   margin-right: 1rem;
 }
+
 .header-box-chat__icon i {
   padding: 1rem 1.5rem;
   margin: 0 0.25rem;
@@ -406,6 +438,7 @@ a {
   cursor: pointer;
   border-radius: 7.5px;
 }
+
 .header-box-chat__icon i:hover {
   color: #FBFBFB;
   background-color: rgba(161, 102, 209, 0.7);
@@ -421,23 +454,28 @@ a {
   display: flex;
   user-select: none;
 }
+
 .single-chat-box--self {
   flex-direction: row-reverse;
   margin-left: 10rem;
 }
+
 .single-chat-box--other {
   margin-right: 10rem;
 }
+
 .single-chat-box__img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
 }
+
 .single-chat-box__img img {
   width: 100%;
   height: 100%;
 }
+
 .single-chat-box__message {
   word-wrap: break-word;
   background-image: linear-gradient(to left top, #5D3B78, #5462e0, #5627d8, #f8f8f9, #f7f7f8, #f6f5f7, #f2ebf6, #f1e1f3, #5462e0, #5D3B78);
@@ -447,6 +485,7 @@ a {
   max-width: 45rem;
   position: relative;
 }
+
 .single-chat-box__message__reaction-container__reaction {
   display: block;
   width: 30px;
@@ -459,15 +498,19 @@ a {
   transition: 0.2s;
   bottom: -2rem;
 }
+
 .single-chat-box__message__reaction-container__reaction:hover {
   background-color: blue;
 }
+
 .single-chat-box__message__reaction-container__reaction--self {
   left: 0;
 }
+
 .single-chat-box__message__reaction-container__reaction--other {
   right: 0;
 }
+
 .single-chat-box__message__reaction-container__reaction-list {
   position: absolute;
   bottom: 1.5rem;
@@ -479,18 +522,23 @@ a {
   cursor: pointer;
   z-index: 9;
 }
+
 .single-chat-box__message__reaction-container__reaction-list--self {
   left: -12rem;
 }
+
 .single-chat-box__message__reaction-container__reaction-list--other {
   right: -12rem;
 }
+
 .single-chat-box__message__reaction-container:hover .single-chat-box__message__reaction-container__reaction-list {
   opacity: 1;
 }
+
 .single-chat-box__message--self {
   background-image: linear-gradient(to right top, #fbfbfb, #fafafa, #f8f8f9, #f7f7f8, #f6f5f7, #f2ebf6);
 }
+
 .single-chat-box:hover {
   color: lightblue;
 }
@@ -504,6 +552,7 @@ a {
   display: flex;
   border-top: thin solid #5D3B78;
 }
+
 .send-message-container__ta {
   flex-grow: 2;
   height: 100%;
@@ -511,12 +560,14 @@ a {
   outline: none;
   border: none;
 }
+
 .send-message-container__icon-container i {
   padding: 1rem 1.5rem;
   border-radius: 10px;
   cursor: pointer;
   transition: 0.2s;
 }
+
 .send-message-container__icon-container i:hover {
   background-color: #a166d1;
   color: #FBFBFB;
@@ -525,6 +576,7 @@ a {
 .friendhome {
   display: flex;
 }
+
 .friendhome__friend-list {
   min-width: 38rem;
   max-width: 38rem;
@@ -532,6 +584,7 @@ a {
   overflow-x: hidden;
   height: 90vh;
 }
+
 .friendhome__friend-list__older-friends {
   color: #5D3B78;
   font-weight: bold;
@@ -539,14 +592,17 @@ a {
   transition: 0.2s;
   user-select: none;
 }
+
 .friendhome__friend-list__older-friends:hover {
   color: #a166d1;
 }
+
 .friendhome__friendRequest-list {
   overflow: scroll;
   overflow-x: hidden;
   height: 85vh;
 }
+
 .friendhome__friendRequest-list__older-friends {
   color: #5D3B78;
   font-weight: bold;
@@ -554,9 +610,11 @@ a {
   transition: 0.2s;
   user-select: none;
 }
+
 .btnFriendAccept {
   background-color: #5D3B78;
 }
+
 .btnFriendAccept:hover {
   background-color: #a166d1;
 }
@@ -565,25 +623,31 @@ a {
   transition: 0.2s;
   cursor: pointer;
 }
+
 .friend:hover {
   background-color: #a166d1;
+  color: white;
 }
+
 .friend__img {
   border-radius: 100%;
   overflow: hidden;
   width: 60px;
   height: 60px;
 }
+
 .friend__img img {
   width: 100%;
   height: 100%;
 }
+
 .friend__imgGroup {
   border-radius: 100%;
   overflow: hidden;
   width: 80px;
   height: 80px;
 }
+
 .friend__imgGroup img {
   width: 100%;
   height: 100%;
@@ -594,16 +658,19 @@ a {
   transition: 0.2s;
   cursor: pointer;
 }
+
 .headerFriend:hover {
   background-color: #a166d1;
   color: white;
 }
+
 .headerFriend__img {
   border-radius: 100%;
   overflow: hidden;
   width: 60px;
   height: 60px;
 }
+
 .headerFriend__img img {
   width: 100%;
   height: 100%;
@@ -619,6 +686,7 @@ a {
   align-items: flex-end;
   position: relative;
 }
+
 .read-by__img {
   top: 0.5rem;
   right: 0;
@@ -628,21 +696,26 @@ a {
   width: 15px;
   height: 15px;
 }
+
 .read-by__img--3 {
   left: 1rem;
 }
+
 .read-by__img--2 {
   left: 2rem;
   z-index: 1;
 }
+
 .read-by__img--1 {
   left: 3rem;
   z-index: 2;
 }
+
 .read-by__img--0 {
   left: 4rem;
   z-index: 3;
 }
+
 .read-by__overlay {
   opacity: 0.5;
   position: absolute;
@@ -669,6 +742,7 @@ a {
   padding: 2rem 0;
   background-color: #FBFBFB;
 }
+
 .header-box-chat__img {
   margin: 0 2rem;
   box-shadow: 0 0 1px #5D3B78;
@@ -677,13 +751,16 @@ a {
   width: 60px;
   height: 60px;
 }
+
 .header-box-chat__img img {
   width: 100%;
   height: 100%;
 }
+
 .header-box-chat__title {
   flex-grow: 6;
 }
+
 .header-box-chat__icon {
   flex-grow: 1;
   display: flex;
@@ -691,6 +768,7 @@ a {
   justify-content: flex-end;
   margin-right: 1rem;
 }
+
 .header-box-chat__icon i {
   padding: 1rem 1.5rem;
   margin: 0 0.25rem;
@@ -698,6 +776,7 @@ a {
   cursor: pointer;
   border-radius: 7.5px;
 }
+
 .header-box-chat__icon i:hover {
   color: #FBFBFB;
   background-color: rgba(161, 102, 209, 0.7);
@@ -713,23 +792,28 @@ a {
   display: flex;
   user-select: none;
 }
+
 .single-chat-box--self {
   flex-direction: row-reverse;
   margin-left: 10rem;
 }
+
 .single-chat-box--other {
   margin-right: 10rem;
 }
+
 .single-chat-box__img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
 }
+
 .single-chat-box__img img {
   width: 100%;
   height: 100%;
 }
+
 .single-chat-box__message {
   word-wrap: break-word;
   background-image: linear-gradient(to left top, #5D3B78, #5462e0, #5627d8, #f8f8f9, #f7f7f8, #f6f5f7, #f2ebf6, #f1e1f3, #5462e0, #5D3B78);
@@ -739,6 +823,7 @@ a {
   max-width: 45rem;
   position: relative;
 }
+
 .single-chat-box__message__reaction-container__reaction {
   display: block;
   width: 30px;
@@ -751,15 +836,19 @@ a {
   transition: 0.2s;
   bottom: -2rem;
 }
+
 .single-chat-box__message__reaction-container__reaction:hover {
   background-color: blue;
 }
+
 .single-chat-box__message__reaction-container__reaction--self {
   left: 0;
 }
+
 .single-chat-box__message__reaction-container__reaction--other {
   right: 0;
 }
+
 .single-chat-box__message__reaction-container__reaction-list {
   position: absolute;
   bottom: 1.5rem;
@@ -771,18 +860,23 @@ a {
   cursor: pointer;
   z-index: 9;
 }
+
 .single-chat-box__message__reaction-container__reaction-list--self {
   left: -12rem;
 }
+
 .single-chat-box__message__reaction-container__reaction-list--other {
   right: -12rem;
 }
+
 .single-chat-box__message__reaction-container:hover .single-chat-box__message__reaction-container__reaction-list {
   opacity: 1;
 }
+
 .single-chat-box__message--self {
   background-image: linear-gradient(to right top, #fbfbfb, #fafafa, #f8f8f9, #f7f7f8, #f6f5f7, #f2ebf6);
 }
+
 .single-chat-box:hover {
   color: lightblue;
 }
@@ -797,5 +891,74 @@ a {
 }
 
 /*variables*/
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
+/*# sourceMappingURL=styles.scss.map */
 
 /*# sourceMappingURL=styles.css.map */
