remove warning code

--- a/src/assets/css/pages/_sendMessage.scss
+++ b/src/assets/css/pages/_sendMessage.scss
@@ -12,7 +12,7 @@
     }
 
     &__icon-container {
-
+        margin: 0 1rem;
         i {
             padding: 1rem 1.5rem;
             border-radius: 10px;
