--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -522,6 +522,9 @@ a {
   outline: none;
   border: none;
 }
+.send-message-container__icon-container {
+  margin: 0 1rem;
+}
 .send-message-container__icon-container i {
   padding: 1rem 1.5rem;
   border-radius: 10px;
