--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -16,6 +16,7 @@
 @import './pages/friend';
 @import './pages/infoOfRoom';
 @import './pages/membersInRoom';
+@import './pages/systemMessage.scss';
 
 /*variables*/
 
