add feature add new members

--- a/src/assets/css/pages/_infoOfRoom.scss
+++ b/src/assets/css/pages/_infoOfRoom.scss
@@ -55,3 +55,10 @@
 
      }
 }
+
+.add-new-member-container {
+     transition: 0.2s;
+     &:hover {
+          background-color: $hoverPurpleColor;
+     }
+}
