--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -684,6 +684,13 @@ a {
   border-radius: 100%;
 }
 
+.add-new-member-container {
+  transition: 0.2s;
+}
+.add-new-member-container:hover {
+  background-color: #a166d1;
+}
+
 .member-in-room__img {
   width: 50px;
   height: 50px;
