--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -17,6 +17,7 @@
 @import './pages/infoOfRoom';
 @import './pages/membersInRoom';
 @import './pages/systemMessage.scss';
+@import './pages/userprofile.scss';
 
 /*variables*/
 
