--- a/src/assets/css/pages/_sendMessage.scss
+++ b/src/assets/css/pages/_sendMessage.scss
@@ -13,6 +13,7 @@
 
     &__icon-container {
         margin: 0 1rem;
+        position: relative;
         i {
             padding: 1rem 1.5rem;
             border-radius: 10px;
@@ -22,6 +23,12 @@
                 background-color: $hoverPurpleColor;
                 color: $mainLightColor;
             }
+        }
+
+        &__emoji-express {
+            position: absolute;
+            bottom: 6rem;
+            right: 0;
         }
     }
 }
