--- a/src/assets/css/pages/_userprofile.scss
+++ b/src/assets/css/pages/_userprofile.scss
@@ -17,8 +17,11 @@
   &__detail {
     input {
       margin-bottom: 10px;
-      padding-left: 10px;
+      
       width: 100%;
+      padding: 0.5rem 2rem;
+
     }
   }
+
 }
