optimizing code and fix show and hide display name userProfile input

--- a/src/assets/css/pages/_userprofile.scss
+++ b/src/assets/css/pages/_userprofile.scss
@@ -25,3 +25,17 @@
   }
 
 }
+.custom-select-tag {
+  cursor: pointer;
+  max-height: 20rem;
+  z-index: -2;
+  
+  &__container-option {
+    height: 20rem;
+  }
+}
+
+.test{
+  overflow: hidden;
+  z-index: 99;
+}
