--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -40,6 +40,8 @@ a {
     margin-top: 10rem;
 }
 
-.modal {
-    overflow: hidden;
+.header-img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 100%;
 }
