--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -40,8 +40,10 @@ a {
   margin-top: 10rem;
 }
 
-.modal {
-  overflow: hidden;
+.header-img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 100%;
 }
 
 /*components*/
