--- a/src/assets/css/pages/_friend.scss
+++ b/src/assets/css/pages/_friend.scss
@@ -4,9 +4,10 @@
     &__friend-list {
         min-width: 38rem;
         max-width: 38rem;
-        overflow: scroll;
+        overflow-y: scroll;
         overflow-x: hidden;
         height: 90vh;
+        z-index: 99;
 
         &__older-friends {
             color: $mainPurpleColor;
@@ -19,14 +20,14 @@
             }
         }
     }
-    
+
     &__friendRequest-list {
         // min-width: 38rem;
         // max-width: 38rem;
         overflow: scroll;
         overflow-x: hidden;
         height: 85vh;
-        
+
         &__older-friends {
             color: $mainPurpleColor;
             font-weight: bold;
@@ -55,7 +56,7 @@
         background-color: $hoverPurpleColor;
         color: white;
     }
-    &__display{
+    &__display {
         &:hover {
             // color: $hoverPurpleColor;
             color: white;
@@ -84,7 +85,6 @@
         }
     }
 }
-
 
 .headerFriend {
     background-color: $mainLightColor;
@@ -115,5 +115,39 @@
 
 .groupImg {
     border-radius: 50%;
-    width:100px;
+    width: 100px;
+}
+
+.option-friend-inbox {
+    user-select: none;
+    position: relative;
+    color: black;
+
+    &__options {
+        position: absolute;
+        background-color: white;
+        box-shadow: 0 0 10px #dddddd;
+        border-radius: 7.5px;
+        display: none;
+        transition: 0.2s;
+        z-index: 9;
+        left: -13rem;
+        top: 0;
+        padding: 1rem;
+
+        &__element {
+            padding: 0.25rem 1rem;
+            border-radius: 7.5px;
+            transition: 0.2s;
+
+            &:hover {
+                background-color: $hoverPurpleColor;
+                box-shadow: 0 0 10px #dddddd;
+            }
+        }
+    }
+
+    &:hover &__options {
+        display: block;
+    }
 }
