--- a/src/assets/css/pages/_sendMessage.scss
+++ b/src/assets/css/pages/_sendMessage.scss
@@ -2,6 +2,7 @@
     flex-shrink: 0;
     display: flex;
     border-top: thin solid $mainPurpleColor;
+    background-color: white;
 
     &__ta {
         flex-grow: 2;
