--- a/src/assets/css/pages/_welcome.scss
+++ b/src/assets/css/pages/_welcome.scss
@@ -1,22 +1,22 @@
 .welcome-container {
-     border-radius: 3rem;
-     box-shadow: 0 0 15px rgba($color: $mainPurpleColor, $alpha: 0.1);
-     padding: 3rem 0;
+    border-radius: 1rem;
+    box-shadow: 0 0 30px $mainLightColor, 0 0 40px $mainDarkColor, 0 0 20px $warningColor;
+    padding: 3rem 0;
+    background-color: $mainLightColor;
+    mainDarkColor &__image {
+        width: 30rem;
+        height: 30rem;
+        display: block;
+    }
 
-     &__image {
-          width: 30rem;
-          height: 30rem;
-          display: block;
-     }
-
-     &__logo {
-          box-shadow: 0 0 10px rgba($color: $mainPurpleColor, $alpha: 0.3);
-          width: 15%;
-          border-radius: 50%;
-          background-color:  $mainPurpleColor;
-     }
+    &__logo {
+        box-shadow: 0 0 10px rgba($color: $mainPurpleColor, $alpha: 0.3);
+        width: 15%;
+        border-radius: 50%;
+        background-color: $mainPurpleColor;
+    }
 }
 
 .err-message {
-     width: 25rem;
+    width: 25rem;
 }
