--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -18,6 +18,7 @@
 @import './pages/membersInRoom';
 @import './pages/systemMessage.scss';
 @import './pages/userprofile.scss';
+@import './pages/changePass';
 
 /*variables*/
 
