--- a/src/assets/css/pages/_welcome.scss
+++ b/src/assets/css/pages/_welcome.scss
@@ -3,7 +3,8 @@
     box-shadow: 0 0 30px $mainLightColor, 0 0 40px $mainDarkColor, 0 0 20px $warningColor;
     padding: 3rem 0;
     background-color: $mainLightColor;
-    mainDarkColor &__image {
+    margin-top: 5rem;
+    &__image {
         width: 30rem;
         height: 30rem;
         display: block;
