--- a/src/assets/css/variables/_variables.scss
+++ b/src/assets/css/variables/_variables.scss
@@ -9,4 +9,4 @@ $focusLightPinkColor: #FF6F91;
 $focusBoldPinkColor: #D65DB1;
 $normalTextSize: 2rem;
 $smallTextSize: 1.3rem;
-
+$mySideColor: #a8d5e3
