--- a/src/assets/css/pages/_welcome.scss
+++ b/src/assets/css/pages/_welcome.scss
@@ -2,7 +2,7 @@
     border-radius: 1rem;
     box-shadow: 0 0 30px $mainLightColor, 0 0 40px $mainDarkColor, 0 0 20px $warningColor;
     padding: 3rem 0;
-    background-color: $mainLightColor;
+    background-color: white;
     margin-top: 5rem;
     &__image {
         width: 30rem;
