fix user image header

--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -7,6 +7,7 @@
         overflow: scroll;
         overflow-x: hidden;
         height: 90vh;
+        background-color: white;
 
         &__older-inboxs {
             color: $mainPurpleColor;
